# qti

./: Make.inc  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  main  main.c  printmatrix.c  qti  qti.c  schmidt_decomposition.c  schmidt_decomposition.oo  test  test.c  test2  test2.c
.deps/: Schmidt_Decomposition.Po  qti.Po
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
matlab/: Makefile  fintrf.dump  fintrf.mexa64  qti.c  qti.dump.no.fort  qti.mexa64  qti.mexa64.backup  qti.o.dump  some  some.c
ruby/: Makefile  extconf.rb  qti.c
